--- a/Elec Project/requirements.txt
+++ b/Elec Project/requirements.txt
@@ -19,6 +19,7 @@ mkl-service=2.4.0=py39h2bbff1b_0
 mkl_fft=1.3.1=py39h277e83a_0
 mkl_random=1.2.2=py39hf11a4ad_0
 numpy=1.21.2=py39hfca59bb_0
+gunicorn
 numpy-base=1.21.2=py39h0829f74_0
 openssl=1.1.1m=h2bbff1b_0
 pip=21.2.4=py39haa95532_0
